--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+fsafsfs
+    <h1>is it working</h1>
+
+  </body>
+</html>
+
 https://erikslewis.github.io/hangmanproject/
 hi
