--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-Hello World
-https://erikslewis.github.io/hangmanproject/
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+  https://erikslewis.github.io/hangmanproject/
+  </body>
+</html>
