--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="app.css">
     <title></title>
   </head>
   <body>
-    https://arcane-scrubland-17622.herokuapp.com/
-    https://erikslewis.github.io/hangmanproject/
+  <h1>  https://arcane-scrubland-17622.herokuapp.com/</h1>
+  <h2>  https://erikslewis.github.io/hangmanproject/ </h2>
   </body>
 </html>
