--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title></title>
   </head>
   <body>
-  <h1>  https://arcane-scrubland-17622.herokuapp.com/</h1>
-  <h2>  https://erikslewis.github.io/hangmanproject/ </h2>
+  <h1 href="https://arcane-scrubland-17622.herokuapp.com/">Personal Trainer App</h1>
+  <h2 href="https://erikslewis.github.io/hangmanproject/">HangMang Game</h2>
   </body>
 </html>
