--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title></title>
   </head>
   <body>
-  <a href="https://arcane-scrubland-17622.herokuapp.com/">Personal Trainer App</a>
-  <a href="https://erikslewis.github.io/hangmanproject/">HangMang Game</a>
+  <div class="link">
+
+
+  <a href="https://arcane-scrubland-17622.herokuapp.com/"><img src="images/15910186_10207444276817050_233251890_n.jpg"/></a>
+  <a href="https://erikslewis.github.io/hangmanproject/"><img src="images/PICw.jpg"/></a>
+    </div> 
   </body>
 </html>
