--- a/index.html
+++ b/index.html
@@ -2,15 +2,79 @@
 <html>
   <head>
     <meta charset="utf-8">
+
     <link rel="stylesheet" href="app.css">
+    <script src="app.js"></script>
     <title></title>
   </head>
   <body>
-  <div class="link">
+    <h1> Hi I'm Erik Shepard Lewis a full stack Web Developer</h1>
+    <h3>Navigation Tabs</h3>
+
+<ul class="tab">
+  <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'Contact')">CONTACT</a></li>
+  <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'Skills')">SKILLS</a></li>
+  <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'Projects')">PROJECTS</a></li>
+  <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'Resume')">RESUME</a></li>
+  <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'About')">ABOUT ME</a></li>
+</ul>
+
+<div id="Contact" class="tabcontent">
+  <h3>Contact Info</h3>
+
+</div>
+
+<div id="Skills" class="tabcontent">
 
 
-  <a href="https://arcane-scrubland-17622.herokuapp.com/"><img src="images/15910186_10207444276817050_233251890_n.jpg"/></a>
-  <a href="https://erikslewis.github.io/hangmanproject/"><img src="images/PICw.jpg"/></a>
-    </div> 
+  <div class="skills">
+ <div class="dropdown">
+   <button class="dropbtn">SKILLS</button>
+   <div class="dropdown-content">
+     <a>HTML</a>
+     <a>Javascript/JQuery</a>
+     <a>CSS/SASS</a>
+     <a>PSQL</a>
+     <a>Ruby</a>
+     <a>Rails</a>
+     <a>API</a>
+     <a>Video Editing</a>
+   </div>
+ </div>
+</div>
+</div>
+
+<div id="Projects" class="tabcontent">
+
+
+  <div class="dropdown">
+    <button class="dropbtn">Projects</button>
+    <div class="dropdown-content">
+      <a> erik </a>
+      <a href="https://arcane-scrubland-17622.herokuapp.com/"><img src="images/15910186_10207444276817050_233251890_n.jpg"/>Fitness Crud APP</a>
+      <a href="https://erikslewis.github.io/hangmanproject/"><img src="images/PICw.jpg"/>Hang Man Game</a>
+
+    </div>
+  </div>
+</div>
+
+<div id="Resume" class="tabcontent">
+  <h3>Resume</h3>
+</div>
+  <div id="About" class="tabcontent">
+    <h3>About Me</h3>
+</div>
+
+
+
+
+
+<div class="Fly">
+  <img class="Fly" src="images/fly.jpg">
+</div>
+
+
   </body>
+
+  </html>
 </html>
