--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title></title>
   </head>
   <body>
-    <h1> Hi I'm Erik Shepard Lewis a full stack Web Developer</h1>
+    <h1> Welcome To InterGalactic Web Development</h1>
+    <h3>By: Erik Shepard Lewis</h3>
     <h3>Navigation Tabs</h3>
 
 <ul class="tab">
