--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title></title>
   </head>
   <body>
+
+
+
     <h1> Welcome To InterGalactic Web Development</h1>
     <h3>By: Erik Shepard Lewis</h3>
     <h3>Navigation Tabs</h3>
@@ -19,6 +22,8 @@
   <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'Resume')">RESUME</a></li>
   <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'About')">ABOUT ME</a></li>
 </ul>
+
+
 
 <div id="Contact" class="tabcontent">
   <h3>Contact Info</h3>
@@ -73,9 +78,19 @@
 <div class="Fly">
   <img class="Fly" src="images/ezgif.com-crop.gif">
 </div>
+<img class="sat" src="images/animated-satellite-image-0016.gif">
+<div>
+<footer class="soc">
+<a href="https://www.linkedin.com/in/erik-shepard-lewis">
+				<img src="images/097145-3d-glossy-blue-orb-icon-social-media-logos-linkedin-logo-square2.png" alt="Linked-In"></a>
+      <a href="https://www.codecademy.com/methodSlayer60817">
+      				<img src="images/codecademy.png"></a>
+            <a href="https://github.com/erikslewis">
+            				<img class="git" src="images/Github-icon.png"></a>
 
+    </footer>
+  </div>
 
   </body>
 
   </html>
-</html>
