--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
   <div class="dropdown">
     <button class="dropbtn">Projects</button>
     <div class="dropdown-content">
-      <a> erik </a>
-      <a href="https://arcane-scrubland-17622.herokuapp.com/"><img src="images/15910186_10207444276817050_233251890_n.jpg"/>Fitness Crud APP</a>
-      <a href="https://erikslewis.github.io/hangmanproject/"><img src="images/PICw.jpg"/>Hang Man Game</a>
+      <a href="https://erikslewis.github.io/pixart_js/"><img src="images/sshot4ceba87fb2a60.jpg"/>PICASSO ART!</a>
+
+      <a href="https://arcane-scrubland-17622.herokuapp.com/"><img src="images/15910186_10207444276817050_233251890_n.jpg"/>FITNESS APP</a>
+      <a href="https://erikslewis.github.io/hangmanproject/"><img src="images/PICw.jpg"/>HANG MAN</a>
 
     </div>
   </div>
