--- a/index.html
+++ b/index.html
@@ -80,7 +80,20 @@
 <div class="Fly">
   <img class="Fly" src="images/ezgif.com-crop.gif">
 </div>
-<img class="sat" src="images/animated-satellite-image-0016.gif">
+
+<div>
+<p>
+
+  <button class="sat" onclick="myMove()">SHOOT</button>
+  <img class="sat" src="images/animated-satellite-image-0016.gif">
+  <div id ="myContainer">
+    <div id ="myAnimation">
+  <img class="Fly" src='images/fire1.gif'></div>
+
+  </div>
+</p>
+</div>
+
 <div>
 <footer class="soc">
 <a href="https://www.linkedin.com/in/erik-shepard-lewis">
