--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 
     <h1> Welcome To InterGalactic Web Development</h1>
-    <h3>By: Erik Shepard Lewis</h3>
+    <h3>By: Erik Shepard-Lewis</h3>
     <h3>Navigation Tabs</h3>
-
+<div>
 <ul class="tab">
   <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'Contact')">CONTACT</a></li>
   <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'Skills')">SKILLS</a></li>
@@ -22,7 +22,7 @@
   <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'Resume')">RESUME</a></li>
   <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'About')">ABOUT ME</a></li>
 </ul>
-
+</div>
 
 
 <div id="Contact" class="tabcontent">
@@ -39,13 +39,21 @@
    <div class="dropdown-content">
      <a>HTML</a>
      <a>Javascript/JQuery</a>
-     <a>CSS/SASS</a>
-     <a>PSQL</a>
+     <a>CSS/Sass</a>
+     <a>SQL/PSQL</a>
      <a>Ruby</a>
      <a>Rails</a>
-     <a>API</a>
+     <a>API/AJAX</a>
      <a>GitHub</a>
      <a>Video Editing</a>
+     <a>Node Js</a>
+     <a>Angular Js</a>
+     <a>Express</a>
+     <a>Mongo</a>
+     <a>Mongoose</a>
+     <a>Heroku</a>
+     <a>Sinatra</a>
+     <a>Active Record</a>
    </div>
  </div>
 </div>
@@ -71,6 +79,8 @@
 </div>
   <div id="About" class="tabcontent">
     <h3>About Me</h3>
+    <img src="images/148476564950119.png" charset="utf-8" style="width:300px; height:300px;">
+    <h2> Hi I'm Erik Shepard-Lewis, former Rugby League player. Now I am currently training at General Assembly to become full stack Web Developer. I have obtained many skills as listed in the skill section. Every day I'm Continuously trying to learn and master new languages, frame works and databases. I also am a extremely fast learner. That loves  building things and being creative. The possibilities  are limitless!  </h2>
 </div>
 
 
@@ -84,12 +94,14 @@
 <div>
 <p>
 
-  <button class="sat" onclick="myMove()">SHOOT</button>
-  <img class="sat" src="images/animated-satellite-image-0016.gif">
-  <div id ="myContainer">
-    <div id ="myAnimation">
-  <img class="Fly" src='images/fire1.gif'></div>
+  <button class="sat" onclick="myMove()">FIRE</button>
 
+
+  <div id ="myContainer">
+    <img class="sat" src="images/animated-satellite-image-0016.gif">
+
+    <div id ="myAnimation">
+<img class="Fly" src='images/fire1.gif'></div>
   </div>
 </p>
 </div>
