--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <div id="About" class="tabcontent">
     <h3>About Me</h3>
     <img src="images/148476564950119.png" charset="utf-8" style="width:300px; height:300px;">
-    <h2> Hi I'm Erik Shepard-Lewis, former Rugby League player. Now I am currently training at General Assembly to become full stack Web Developer. I have obtained many skills as listed in the skill section. Every day I'm Continuously trying to learn and master new languages, frame works and databases. I also am a extremely fast learner. That loves  building things and being creative. The possibilities  are limitless!  </h2>
+    <h2> Hi I'm Erik Shepard-Lewis, former Rugby League player. Now I am currently training at General Assembly to become full stack Web Developer. I have obtained many skills as listed in the skill section. Every day I'm Continuously trying to learn and master new languages, frame works and databases. I'm also an extremely fast learner. I love building things and being creative. The possibilities are limitless!  </h2>
 </div>
 
 
