--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 
 <div id="Contact" class="tabcontent">
   <h3>Contact Info</h3>
+  <a href="https://www.linkedin.com/in/erik-shepard-lewis">
+  				<img src="images/097145-3d-glossy-blue-orb-icon-social-media-logos-linkedin-logo-square2.png" alt="Linked-In"></a>
+          <h2>E-mail: </h2>
 
 </div>
 
@@ -68,7 +71,7 @@
       <a href="https://erikslewis.github.io/pixart_js/"><img src="images/sshot4ceba87fb2a60.jpg"/>PICASSO ART!</a>
 
       <a href="https://arcane-scrubland-17622.herokuapp.com/"><img src="images/15910186_10207444276817050_233251890_n.jpg"/>FITNESS APP</a>
-      <a href="https://erikslewis.github.io/hangmanproject/"><img src="images/PICw.jpg"/>HANG MAN</a>
+      <a href="https://erikslewis.github.io/hangmanproject/"><img src="images/PICw.jpg"/>HANGMAN GAME</a>
 
     </div>
   </div>
@@ -88,17 +91,23 @@
 
 
 <div class="Fly">
-  <img class="Fly" src="images/ezgif.com-crop.gif">
+  <img class="Fly" src="images/tumblr_mzpjx8VJTh1qcoscoo1_400.gif">
 </div>
 
 <div>
 <p>
 
-  <button class="sat" onclick="myMove()">FIRE</button>
+
 
 
   <div id ="myContainer">
-    <img class="sat" src="images/animated-satellite-image-0016.gif">
+
+      <button class="sat" onclick="myMove()">FIRE</button><br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <img class="sat" src="images/animated-satellite-image-0016.gif">
 
     <div id ="myAnimation">
 <img class="Fly" src='images/fire1.gif'></div>
@@ -113,8 +122,8 @@
       <a href="https://www.codecademy.com/methodSlayer60817">
       				<img src="images/codecademy.png"></a>
             <a href="https://github.com/erikslewis">
-            				<img class="git" src="images/Github-icon.png"></a>
-
+            				<img class="git" src="images/Github-icon.png"></a><br>
+<img class="logo" src="images/best.png">
     </footer>
   </div>
 
