--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
   <div class="dropdown">
     <button class="dropbtn">Projects</button>
     <div class="dropdown-content">
+      <a href="https://erikslewis.github.io/iron-man/"><img src="images/imageedit_7_5022970184.png"/>IRONMAN GAME</a>
       <a href="https://erikslewis.github.io/pixart_js/"><img src="images/sshot4ceba87fb2a60.jpg"/>PICASSO ART!</a>
 
       <a href="https://arcane-scrubland-17622.herokuapp.com/"><img src="images/15910186_10207444276817050_233251890_n.jpg"/>FITNESS APP</a>
