--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <h1> Welcome To InterGalactic Web Development</h1>
     <h3>By: Erik Shepard-Lewis</h3>
-    <h3>Navigation Tabs</h3>
+    <h3>Exploration Tabs </h3><img src="images/Down_Arrow_Download.png">
 <div>
 <ul class="tab">
   <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'Contact')">CONTACT</a></li>
@@ -29,7 +29,7 @@
   <h3>Contact Info</h3>
   <a href="https://www.linkedin.com/in/erik-shepard-lewis">
   				<img src="images/097145-3d-glossy-blue-orb-icon-social-media-logos-linkedin-logo-square2.png" alt="Linked-In"></a>
-          <h2>E-mail: </h2>
+          <h2>E-mail: ESLWEBDEVELOPMENT@aol.com</h2>
 
 </div>
 
@@ -42,21 +42,22 @@
    <div class="dropdown-content">
      <a>HTML</a>
      <a>Javascript/JQuery</a>
-     <a>CSS/Sass</a>
-     <a>SQL/PSQL</a>
+     <a>CSS/SASS</a>
      <a>Ruby</a>
+     <a>SQL/PSQL</a>
+     <a>Active Record</a>
+     <a>Mongo</a>
+     <a>Mongoose</a>
      <a>Rails</a>
-     <a>API/AJAX</a>
-     <a>GitHub</a>
-     <a>Video Editing</a>
+     <a>Sinatra</a>
      <a>Node Js</a>
      <a>Angular Js</a>
      <a>Express</a>
-     <a>Mongo</a>
-     <a>Mongoose</a>
      <a>Heroku</a>
-     <a>Sinatra</a>
-     <a>Active Record</a>
+     <a>GitHub</a>
+     <a>API/AJAX</a>
+     <a>Video Editing</a>
+
    </div>
  </div>
 </div>
@@ -68,11 +69,11 @@
   <div class="dropdown">
     <button class="dropbtn">Projects</button>
     <div class="dropdown-content">
-      <a href="https://erikslewis.github.io/iron-man/"><img src="images/imageedit_7_5022970184.png"/>IRONMAN GAME</a>
-      <a href="https://erikslewis.github.io/pixart_js/"><img src="images/sshot4ceba87fb2a60.jpg"/>PICASSO ART!</a>
+      <a href="https://erikslewis.github.io/iron-man/"><img src="images/imageedit_7_5022970184.png"/><br>IRONMAN GAME</a>
+      <a href="https://erikslewis.github.io/pixart_js/"><img src="images/sshot4ceba87fb2a60.jpg"/><br>PICASSO ART!</a>
 
-      <a href="https://arcane-scrubland-17622.herokuapp.com/"><img src="images/15910186_10207444276817050_233251890_n.jpg"/>FITNESS APP</a>
-      <a href="https://erikslewis.github.io/hangmanproject/"><img src="images/PICw.jpg"/>HANGMAN GAME</a>
+      <a href="https://arcane-scrubland-17622.herokuapp.com/"><img src="images/15910186_10207444276817050_233251890_n.jpg"/><br>FITNESS APP</a>
+      <a href="https://erikslewis.github.io/hangmanproject/"><img src="images/PICw.jpg"/><br>HANGMAN GAME</a>
 
     </div>
   </div>
@@ -84,7 +85,7 @@
   <div id="About" class="tabcontent">
     <h3>About Me</h3>
     <img src="images/148476564950119.png" charset="utf-8" style="width:300px; height:300px;">
-    <h2> Hi I'm Erik Shepard-Lewis, former Rugby League player. Now I am currently training at General Assembly to become full stack Web Developer. I have obtained many skills as listed in the skill section. Every day I'm Continuously trying to learn and master new languages, frame works and databases. I'm also an extremely fast learner. I love building things and being creative. The possibilities are limitless!  </h2>
+    <h2> Hi I'm Erik Shepard-Lewis, former Rugby League player. Now I am currently training at General Assembly to become full stack Web Developer. I have obtained many skills as listed in the skill section. Every day I'm Continuously trying to learn and master new languages, frame works and databases. I'm also an extremely fast learner. I love building things and being creative, making ideas come to life. The possibilities are limitless!  </h2>
 </div>
 
 
