--- a/index.html
+++ b/index.html
@@ -40,23 +40,25 @@
  <div class="dropdown">
    <button class="dropbtn">SKILLS</button>
    <div class="dropdown-content">
-     <a>HTML</a>
-     <a>Javascript/JQuery</a>
-     <a>CSS/SASS</a>
-     <a>Ruby</a>
-     <a>SQL/PSQL</a>
-     <a>Active Record</a>
-     <a>Mongo</a>
-     <a>Mongoose</a>
-     <a>Rails</a>
-     <a>Sinatra</a>
-     <a>Node Js</a>
-     <a>Angular Js</a>
-     <a>Express</a>
-     <a>Heroku</a>
-     <a>GitHub</a>
-     <a>API/AJAX</a>
-     <a>Video Editing</a>
+     <a><img class="git" src="images/HTML5_Logo_gray-225.png"></a>
+     <a><img class="git" src="images/javascript-logo.png"></a>
+     <a><img class="git" src="images/css3-logo.png"></a>
+     <a> <img class="git" src="images/rubyaaaa.png"></a>
+     <a><img class="git" src="images/postgres-logo-01.png"></a>
+     <a><img class="git" src="images/badges_activerecord_Stage1.png"></a>
+     <a><img class="git" src="images/aaaaaa.png"></a>
+     <a><img class="git" src="images/mongoDB.png"></a>
+     <a><img class="git" src="images/rails-new.sh-600x600.png"></a>
+     <a><img class="git" src="images/realone.png"></a>
+     <a><img class="git" src="images/nodejsss.png"></a>
+     <a><img class="git" src="images/AN.png"></a>
+     <a><img class="git" src="images/mean-stack.png"></a>
+     <a><img class="git" src="images/687474703a2f2f7265732e636c6f7564696e6172792e636f6d2f646a7a6c356b6d61372f696d6167652f75706c6f61642f76313433373838333435312f4865726f6b755f6c6f676f5f6d6f6b7369702e706e67.png"></a>
+     <a href="https://github.com/erikslewis">
+             <img class="git" src="images/githubsec.gif"></a>
+     <a><img class="git" src="images/AJAX_logo_by_gengns.svg.png"></a>
+     <a><img class="git" src="images/55124.png"></a>
+     <a><img class="git" src="images/zzzzzz.png"></a>
 
    </div>
  </div>
@@ -104,11 +106,8 @@
 
   <div id ="myContainer">
 
-      <button class="sat" onclick="myMove()">FIRE</button><br>
-      <br>
-      <br>
-      <br>
-      <br>
+      <button class="sat" onclick="myMove()"><img src="images/105879-3d-glossy-orange-orb-icon-natural-wonders-fire.png" alt=""></button><br>
+      
       <img class="sat" src="images/animated-satellite-image-0016.gif">
 
     <div id ="myAnimation">
@@ -124,7 +123,9 @@
       <a href="https://www.codecademy.com/methodSlayer60817">
       				<img src="images/codecademy.png"></a>
             <a href="https://github.com/erikslewis">
-            				<img class="git" src="images/Github-icon.png"></a><br>
+            				<img class="git" src="images/Github-icon.png"></a>
+                    <a href="https://www.codewars.com/users/DeadShotE">
+                            <img class="war" src="images/newist.jpeg"></a><br>
 <img class="logo" src="images/best.png">
     </footer>
   </div>
