--- a/index.html
+++ b/index.html
@@ -106,12 +106,9 @@
 
   <div id ="myContainer">
 
-      <button class="sat" onclick="myMove()"><img src="images/105879-3d-glossy-orange-orb-icon-natural-wonders-fire.png" alt=""></button><br>
-      
-      <img class="sat" src="images/animated-satellite-image-0016.gif">
-
-    <div id ="myAnimation">
-<img class="Fly" src='images/fire1.gif'></div>
+      <button class="sat" onclick="myMove()"><img src="images/newbtn.png" alt=""></button><br>
+<div id ="myAnimation">
+<img class="Fly" src='images/giffire.gif'></div>
   </div>
 </p>
 </div>
