--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
   <head>
     <meta charset="utf-8">
 
+
     <link rel="stylesheet" href="app.css">
     <script src="app.js"></script>
     <title></title>
   </head>
   <body>
 
-
-
     <h1> Welcome To InterGalactic Web Development</h1>
     <h3>By: Erik Shepard-Lewis</h3>
-    <h3>Exploration Tabs </h3><img src="images/Down_Arrow_Download.png">
+    <h3>Exploration Tabs </h3>
 <div>
 <ul class="tab">
-  <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'Contact')">CONTACT</a></li>
-  <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'Skills')">SKILLS</a></li>
+  <img src="images/Down_Arrow_Download.png"><br>
+    <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'Resume')">Résumé</a></li><br>
+  <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'Skills')">ABILITIES</a></li><br>
   <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'Projects')">PROJECTS</a></li>
-  <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'Resume')">RESUME</a></li>
-  <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'About')">ABOUT ME</a></li>
+    <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'About')">ABOUT ME</a></li>
+  <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'Contact')">CONTACT</a></li>
 </ul>
 </div>
 
@@ -38,12 +38,12 @@
 
   <div class="skills">
  <div class="dropdown">
-   <button class="dropbtn">SKILLS</button>
+   <button class="dropbtn">Special Abilities</button>
    <div class="dropdown-content">
-     <a><img class="git" src="images/HTML5_Logo_gray-225.png"></a>
+     <a><img class="html" src="images/HTML5_Logo_gray-225.png"></a>
      <a><img class="git" src="images/javascript-logo.png"></a>
      <a><img class="git" src="images/css3-logo.png"></a>
-     <a> <img class="git" src="images/rubyaaaa.png"></a>
+     <a><img class="git" src="images/rubyaaaa.png"></a>
      <a><img class="git" src="images/postgres-logo-01.png"></a>
      <a><img class="git" src="images/badges_activerecord_Stage1.png"></a>
      <a><img class="git" src="images/aaaaaa.png"></a>
@@ -53,7 +53,7 @@
      <a><img class="git" src="images/nodejsss.png"></a>
      <a><img class="git" src="images/AN.png"></a>
      <a><img class="git" src="images/mean-stack.png"></a>
-     <a><img class="git" src="images/687474703a2f2f7265732e636c6f7564696e6172792e636f6d2f646a7a6c356b6d61372f696d6167652f75706c6f61642f76313433373838333435312f4865726f6b755f6c6f676f5f6d6f6b7369702e706e67.png"></a>
+     <a><img class="git" src="images/58480873cef1014c0b5e48ea.png"></a>
      <a href="https://github.com/erikslewis">
              <img class="git" src="images/githubsec.gif"></a>
      <a><img class="git" src="images/AJAX_logo_by_gengns.svg.png"></a>
@@ -64,7 +64,9 @@
  </div>
 </div>
 </div>
-
+<div id="Resume" class="tabcontent">
+  <h3>Résumé</h3>
+</div>
 <div id="Projects" class="tabcontent">
 
 
@@ -87,7 +89,7 @@
   <div id="About" class="tabcontent">
     <h3>About Me</h3>
     <img src="images/148476564950119.png" charset="utf-8" style="width:300px; height:300px;">
-    <h2> Hi I'm Erik Shepard-Lewis, former Rugby League player. Now I am currently training at General Assembly to become full stack Web Developer. I have obtained many skills as listed in the skill section. Every day I'm Continuously trying to learn and master new languages, frame works and databases. I'm also an extremely fast learner. I love building things and being creative, making ideas come to life. The possibilities are limitless!  </h2>
+    <h2> Hi I'm Erik Shepard-Lewis, former Rugby League player. Now I am currently training at General Assembly to become full stack Web Developer. I have obtained many skills as listed in the skill section. Every day I'm Continuously trying to learn and master new languages, frameworks and databases. I'm also an extremely fast learner. I love building things and being creative, making ideas come to life. The possibilities are limitless!  </h2>
 </div>
 
 
@@ -120,7 +122,7 @@
       <a href="https://www.codecademy.com/methodSlayer60817">
       				<img src="images/codecademy.png"></a>
             <a href="https://github.com/erikslewis">
-            				<img class="git" src="images/Github-icon.png"></a>
+            				<img class="github" src="images/Github-icon.png"></a>
                     <a href="https://www.codewars.com/users/DeadShotE">
                             <img class="war" src="images/newist.jpeg"></a><br>
 <img class="logo" src="images/best.png">
@@ -128,5 +130,4 @@
   </div>
 
   </body>
-
-  </html>
+</html>
