--- a/index.html
+++ b/index.html
@@ -2,34 +2,32 @@
 <html>
   <head>
     <meta charset="utf-8">
-
-
     <link rel="stylesheet" href="app.css">
     <script src="app.js"></script>
     <title></title>
   </head>
   <body>
-
-    <h1> Welcome To InterGalactic Web Development</h1>
-    <h3>By: Erik Shepard-Lewis</h3>
-    <h3>Exploration Tabs </h3>
 <div>
-<ul class="tab">
-  <img src="images/Down_Arrow_Download.png"><br>
-    <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'Resume')">Résumé</a></li><br>
+  <ul class="tab">
+    <h1>Welcome To InterGalactic<br> Web Development</h1>
+    <h3>By: Erik Shepard-Lewis <br>Exploration Controls</h3><br>
+
+
+
+  <img class="img2" src="images/Down_Arrow_Download.png"><br>
+    <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'Projects')">PROJECTS</a></li>
   <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'Skills')">ABILITIES</a></li><br>
-  <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'Projects')">PROJECTS</a></li>
+      <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'Resume')">Résumé</a></li>
     <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'About')">ABOUT ME</a></li>
   <li><a href="javascript:void(0)" class="tablinks" onclick="openCity(event, 'Contact')">CONTACT</a></li>
-</ul>
-</div>
+
 
 
 <div id="Contact" class="tabcontent">
-  <h3>Contact Info</h3>
+  <h3>Contact Info</h3><br>
   <a href="https://www.linkedin.com/in/erik-shepard-lewis">
   				<img src="images/097145-3d-glossy-blue-orb-icon-social-media-logos-linkedin-logo-square2.png" alt="Linked-In"></a>
-          <h2>E-mail: ESLWEBDEVELOPMENT@aol.com</h2>
+          <h2>E-MAIL: ESLWEBDEVELOPMENT@AOL.COM</h2>
 
 </div>
 
@@ -71,7 +69,7 @@
 
 
   <div class="dropdown">
-    <button class="dropbtn">Projects</button>
+    <button class="dropbtn">Project Prototypes</button>
     <div class="dropdown-content">
       <a href="https://erikslewis.github.io/iron-man/"><img src="images/imageedit_7_5022970184.png"/><br>IRONMAN GAME</a>
       <a href="https://erikslewis.github.io/pixart_js/"><img src="images/sshot4ceba87fb2a60.jpg"/><br>PICASSO ART!</a>
@@ -87,47 +85,51 @@
   <h3>Resume</h3>
 </div>
   <div id="About" class="tabcontent">
-    <h3>About Me</h3>
+    <h3>About Me</h3><br>
     <img src="images/148476564950119.png" charset="utf-8" style="width:300px; height:300px;">
     <h2> Hi I'm Erik Shepard-Lewis, former Rugby League player. Now I am currently training at General Assembly to become full stack Web Developer. I have obtained many skills as listed in the skill section. Every day I'm Continuously trying to learn and master new languages, frameworks and databases. I'm also an extremely fast learner. I love building things and being creative, making ideas come to life. The possibilities are limitless!  </h2>
 </div>
 
-
-
-
-
 <div class="Fly">
   <img class="Fly" src="images/tumblr_mzpjx8VJTh1qcoscoo1_400.gif">
 </div>
-
-<div>
-<p>
-
-
-
-
   <div id ="myContainer">
-
-      <button class="sat" onclick="myMove()"><img src="images/newbtn.png" alt=""></button><br>
+      <button class="sat" onclick="myMove()"><img  class="img2" src="images/newbtn.png" alt=""></button><br>
 <div id ="myAnimation">
 <img class="Fly" src='images/giffire.gif'></div>
   </div>
-</p>
-</div>
-
-<div>
-<footer class="soc">
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <a href="https://www.linkedin.com/in/erik-shepard-lewis">
-				<img src="images/097145-3d-glossy-blue-orb-icon-social-media-logos-linkedin-logo-square2.png" alt="Linked-In"></a>
+				<img  class="img2" src="images/097145-3d-glossy-blue-orb-icon-social-media-logos-linkedin-logo-square2.png" alt="Linked-In"></a>
       <a href="https://www.codecademy.com/methodSlayer60817">
-      				<img src="images/codecademy.png"></a>
+      				<img class="img2" src="images/codecademy.png"></a>
             <a href="https://github.com/erikslewis">
             				<img class="github" src="images/Github-icon.png"></a>
                     <a href="https://www.codewars.com/users/DeadShotE">
                             <img class="war" src="images/newist.jpeg"></a><br>
 <img class="logo" src="images/best.png">
-    </footer>
-  </div>
 
+</ul>
+</div>
   </body>
 </html>
