--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 <div>
   <ul class="tab">
-    <h1 class="animated zoomInLeft">Welcome To InterGalactic<br> Web Development</h1>
+    <h1 class="animated zoomInDown">Welcome To InterGalactic<br> Web Development</h1>
     <h3 class="animated fadeIn">By: Erik Shepard-Lewis <br>Exploration Controls</h3><br>
 
 
@@ -109,9 +109,9 @@
   <img class="Fly" src="images/tumblr_mzpjx8VJTh1qcoscoo1_400.gif">
 </div>
 <div class="animated infinite pulse">
-  <div id ="myContainer" class="animated zoomInUp">
+  <div id ="myContainer" class="animated rotateIn">
       <button  class="sat" onclick="myMove()"><img  class="img2" src="images/newbtn.png" alt=""></button><br>
-      
+
 <div id ="myAnimation">
 <img class="Fly" src='images/giffire.gif'></div>
 </div>
