Group Project Added

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <button id="myton" class="animated zoomInDown" ><img class="img2" src="images/Down_Arrow_Download.png" class="dropbtn"></button><br>
   </div>
       <div id="myDropdown" class="dropdown-content">
-        <a href="#about" class="animated fadeInUp">Final GA Project<br><img class="img2" src="images/death-star-clipart-1.jpg"></a>
-        <a href="#contact"class="animated fadeInUp">Group Project<img class="img2" src="images/xx.gif"></a>
+        <a href="#about" class="animated fadeIn">Final GA Project<br><img class="img2" src="images/death-star-clipart-1.jpg"></a>
+        <a href="https://erikslewis.github.io/gofilter/"class="animated lightSpeedIn">GROUP PROJECT<img class="img2" src="images/xx.gif"></a>
           <a href="#home" class="animated fadeInUp">Small Projects<img class="img2" src="images/x-wing-dribbble.gif"></a>
       </div>
     </div><br>
