--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <button id="myton" class="animated zoomInDown" ><img class="img2" src="images/Down_Arrow_Download.png" class="dropbtn"></button><br>
   </div>
       <div id="myDropdown" class="dropdown-content">
-        <a href="#about" class="animated fadeIn">Final GA Project<br><img class="img2" src="images/death-star-clipart-1.jpg"></a>
-        <a href="https://erikslewis.github.io/gofilter/"class="animated lightSpeedIn">GROUP PROJECT<img class="img2" src="images/xx.gif"></a>
-          <a href="#home" class="animated fadeInUp">Small Projects<img class="img2" src="images/x-wing-dribbble.gif"></a>
+        <a href="https://erikslewis.github.io/Video-chat/" class="animated fadeIn">Big GA Project<br><img class="img2" src="images/death-star-clipart-1.jpg"></a>
+          <a href="#home" class="animated fadeInUp">Small Projects<img class="img2" src="images/thisone.gif"></a>
+          <a href="https://erikslewis.github.io/gofilter/"class="animated lightSpeedIn">GROUP PROJECT<img class="img2" src="images/xx.gif"></a>
       </div>
     </div><br>
 
@@ -69,6 +69,8 @@
      <a><img class="git" src="images/AJAX_logo_by_gengns.svg.png"></a>
      <a><img class="git" src="images/55124.png"></a>
      <a><img class="git" src="images/zzzzzz.png"></a>
+     <a><img class="git" src="images/React-JS.sh.png"></a>
+     <a><img class="git" src="images/ws_logo.png"></a>
    </div>
  </div>
 </div>
