--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <button id="myton" class="animated zoomInDown" ><img class="img2" src="images/Down_Arrow_Download.png" class="dropbtn"></button><br>
   </div>
       <div id="myDropdown" class="dropdown-content">
-        <a href="https://erikslewis.github.io/Video-chat/" class="animated fadeIn">Big GA Project<br><img class="img2" src="images/death-star-clipart-1.jpg"></a>
-          <a href="#home" class="animated fadeInUp">Small Projects<img class="img2" src="images/thisone.gif"></a>
-          <a href="https://erikslewis.github.io/gofilter/"class="animated lightSpeedIn">GROUP PROJECT<img class="img2" src="images/xx.gif"></a>
+        <a href="https://erikslewis.github.io/Video-chat/" class="animated fadeIn">Video call Website<br><img class="imgB" src="images/death-star-clipart-1.jpg"></a>
+          <a href="https://arcane-scrubland-17622.herokuapp.com/" class="animated fadeInUp">Fitness App<img class="imgB" src="images/thisone.gif"></a>
+          <a href="https://erikslewis.github.io/gofilter/"class="animated lightSpeedIn">GROUP PROJECT<img class="imgB" src="images/xx.gif"></a>
       </div>
     </div><br>
 
