added more skills

--- a/index.html
+++ b/index.html
@@ -53,14 +53,17 @@
      <a><img class="html" src="images/HTML5_Logo_gray-225.png"></a>
      <a><img class="git" src="images/javascript-logo.png"></a>
      <a><img class="git" src="images/css3-logo.png"></a>
+     <a><img class="git" src="images/api-icon.png"></a>
      <a><img class="git" src="images/rubyaaaa.png"></a>
+     <a><img class="git" src="images/rails-new.sh-600x600.png"></a>
+     <a><img class="git" src="images/nodejsss.png"></a>
      <a><img class="git" src="images/postgres-logo-01.png"></a>
+     <a><img class="git" src="images/sql-database-icon-png-21.png"></a>
      <a><img class="git" src="images/badges_activerecord_Stage1.png"></a>
      <a><img class="git" src="images/aaaaaa.png"></a>
      <a><img class="git" src="images/mongoDB.png"></a>
-     <a><img class="git" src="images/rails-new.sh-600x600.png"></a>
      <a><img class="git" src="images/realone.png"></a>
-     <a><img class="git" src="images/nodejsss.png"></a>
+     <a><img class="git" src="images/expressjs.png"></a>
      <a><img class="git" src="images/AN.png"></a>
      <a><img class="git" src="images/mean-stack.png"></a>
      <a><img class="git" src="images/58480873cef1014c0b5e48ea.png"></a>
